sticky-nav-flex-gap-fix

--- a/css/queries.css
+++ b/css/queries.css
@@ -135,8 +135,11 @@ TO CALCULATE IT, YOU CAN DIVIDE THE VALUE ON PIXELS BETWEEN 16, AND WITH THAT YO
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.904);
+    background-color: rgba(255, 255, 255, 0.6);
     position: absolute;
+    /* USE "-webkit- TO MAKE THIS PROPERTY WORKS ON SAFARI" */
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
     top: 0;
     left: 0;
     width: 100%;
@@ -275,6 +278,57 @@ TO CALCULATE IT, YOU CAN DIVIDE THE VALUE ON PIXELS BETWEEN 16, AND WITH THAT YO
 
   .cta-text-box {
     padding: 3.2rem;
+  }
+}
+
+/* FIXING SAFARI FLEXBOX GAP */
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 }
 
