--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,9 @@ html {
   /* FONT-SIZE - 10px */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* THIS PROPERTY IS USED TO GIVE AN ANIMATION TO THE LINKS OVER THE PAGE, BUT DOESN'T WORK ON SAFARI */
+  /* scroll-behavior: smooth; */
 }
 
 * {
@@ -210,6 +213,24 @@ body {
 /* THIS IS HOW YOU SELECT AN HTML ELEMENT BASED ON AN ATRIBUTTE */
 .icon-mobile-nav[name="close-outline"] {
   display: none;
+}
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 /* HERO SECTION */
